--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.13.0",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
